--- a/WpfAppForTest.App/MainWindow.xaml
+++ b/WpfAppForTest.App/MainWindow.xaml
@@ -1,32 +1,19 @@
-﻿<Window x:Class="TransmittalCreator.Window1"
+﻿<Window x:Class="WpfAppForTest.App.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TransmittalCreator"
+        xmlns:local="clr-namespace:WpfAppForTest.App"
         mc:Ignorable="d"
         Title="MainWindow" Height="250" Width="500"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:services="clr-namespace:TransmittalCreator.Services"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight ="Regular"
         TextElement.FontSize="14"
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
-        FontFamily="{materialDesign:MaterialDesignFont}"
-        >
-    <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <materialDesign:BundledTheme BaseTheme="Dark" PrimaryColor="LightBlue" SecondaryColor="Lime" />
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/materialdesigntheme.dark.xaml" /> 
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" /> 
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/themes/recommended/primary/materialdesigncolor.blue.xaml"/> 
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/themes/recommended/accent/materialdesigncolor.green.xaml"/> 
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>
+        FontFamily="{materialDesign:MaterialDesignFont}">
     
     <DockPanel x:Name="MainPanel">
         <Menu DockPanel.Dock="Top"/>
@@ -51,7 +38,7 @@
                       ItemsSource="{Binding AttributeViewModel.Attributes}" 
                       SelectedItem="{Binding BlockAttribute}" 
                       IsEnabled="{Binding IsChecked, ElementName=attributeCheckBox}" FontSize="12" 
-                      >
+                     >
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                             <StackPanel Orientation="Vertical">
@@ -87,7 +74,7 @@
             <TextBlock Grid.Column="0" Grid.Row="4" Text="Filename"/>
             <TextBlock Grid.Column="2" Grid.Row="4" x:Name="fileNameTextblock" Text="{Binding FileName}"/>
             <TextBlock Name="TextBlock1" Visibility="Collapsed" ></TextBlock>
-            <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="5" Margin="8 15 0 0" Name="createButton" Command="{Binding AddCommand}" TabIndex="3">Submit</Button>
+            <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="5" Margin="8 15 0 0" Name="createButton" Command="{Binding AddCommand}" TabIndex="3" Click="NewCommand_Executed">Submit</Button>
         </Grid>
     </DockPanel>
-</Window>
+   </Window>
