--- a/WpfAppForTest/MainWindow.xaml
+++ b/WpfAppForTest/MainWindow.xaml
@@ -48,10 +48,10 @@
                 </Button>
             </ToolBar>
         </ToolBarTray>
-        <Grid VerticalAlignment="Top" Margin="16">
+        <Grid VerticalAlignment="Stretch" Margin="16">
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -63,9 +63,11 @@
             <TextBlock Grid.Column="1" Margin="8 0 0 0"  VerticalAlignment="Center">Name</TextBlock>
             <TextBox Grid.Column="2" Margin="8 0 0 0" VerticalAlignment="Center"></TextBox>
             <Button Grid.Column="3" Margin="8 0 0 0" >Submit</Button>
-            <materialDesign:Card Grid.Row="1" Grid.ColumnSpan="4" Height="200">
+
+            <materialDesign:Card Grid.Row="1" Grid.ColumnSpan="4" Margin="10">
                 <StackPanel Orientation="Horizontal" Margin="16">
-                    <TextBlock></TextBlock>
+                    <materialDesign:PackIcon Kind="Abacus"></materialDesign:PackIcon>
+                    <TextBlock Margin="16 0 0 0">ddddd</TextBlock>
                 </StackPanel>
             </materialDesign:Card>
         </Grid>
