--- a/WpfAppForTest.App/MainWindow.xaml
+++ b/WpfAppForTest.App/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfAppForTest.App"
         mc:Ignorable="d"
-        Title="MainWindow" Height="250" Width="500"
+        Title="MainWindow" Height="300" Width="500"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight ="Regular"
@@ -25,6 +25,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto"/>
                 <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -33,12 +34,16 @@
             </Grid.ColumnDefinitions>
             
             <TextBlock Grid.Column="0" VerticalAlignment="Center">Select block attribute</TextBlock>
-            <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="{Binding IsCheckedAttribute, UpdateSourceTrigger=PropertyChanged}" Name="attributeCheckBox"/>
-            <ComboBox Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" Name="comboAttributs" Height="40"
+            <CheckBox Grid.Row="0" Grid.Column="1" 
+                      Style="{StaticResource MaterialDesignFilterChipPrimaryOutlineCheckBox}"
+                      IsChecked="{Binding IsCheckedAttribute, UpdateSourceTrigger=PropertyChanged}" 
+                      Name="attributeCheckBox"/>
+            <ComboBox Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" Name="comboAttributs" Height="50"
+                      materialDesign:HintAssist.Hint="Select Attribute"
+                      Style="{StaticResource MaterialDesignOutlinedComboBox}"
                       ItemsSource="{Binding AttributeViewModel.Attributes}" 
                       SelectedItem="{Binding BlockAttribute}" 
-                      IsEnabled="{Binding IsChecked, ElementName=attributeCheckBox}" FontSize="12" 
-                     >
+                      IsEnabled="{Binding IsChecked, ElementName=attributeCheckBox}" FontSize="12">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                             <StackPanel Orientation="Vertical">
@@ -56,16 +61,37 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
 
-            <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center">Numbering 1,2,3..Start with: </TextBlock>
-            <CheckBox Grid.Column="1" Grid.Row="1" Name="numberingCheckbox" IsChecked="{Binding IsCheckedNumbering, UpdateSourceTrigger=PropertyChanged}"></CheckBox>
+            <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center">
+                Numbering 1,2,3..Start with:
+            </TextBlock>
+            <CheckBox Grid.Column="1" Grid.Row="1" Name="numberingCheckbox" 
+                      Style="{StaticResource MaterialDesignFilterChipPrimaryOutlineCheckBox}"
+                      IsChecked="{Binding IsCheckedNumbering, UpdateSourceTrigger=PropertyChanged}"></CheckBox>
             <TextBox Grid.Column="2" Grid.Row="1" Name="numberingTextbox" 
                      Text="{Binding Path=NumberingValue}" PreviewTextInput="NumberValidationTextBox"
-                     IsEnabled="{Binding IsChecked, ElementName=numberingCheckbox}" >
+                     IsEnabled="{Binding IsChecked, ElementName=numberingCheckbox}">
             </TextBox>
 
             <TextBlock Grid.Column="0" Grid.Row="2" VerticalAlignment="Center">Prefix</TextBlock>
             <!--<CheckBox Grid.Column="1" Grid.Row="2" ></CheckBox>-->
-            <TextBox Grid.Column="2" Grid.Row="2" Name="prefixTextBox" Text="{Binding Path=Prefix}"></TextBox>
+            <TextBox Grid.Column="2" Grid.Row="2" Name="prefixTextBox" 
+                     
+                     Text="{Binding Path=Prefix}"
+                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                     materialDesign:TextFieldAssist.HasClearButton="True"
+                     materialDesign:TextFieldAssist.PrefixText="$"
+                     >
+                <materialDesign:HintAssist.Hint>
+                    <StackPanel
+                        Orientation="Horizontal"
+                        Margin="-2 0 0 0">
+                        
+                        <TextBlock
+                            Text="Enter prefix" />
+                    </StackPanel>
+                </materialDesign:HintAssist.Hint>
+
+            </TextBox>
 
             <TextBlock Grid.Column="0" Grid.Row="3" VerticalAlignment="Center">Suffix</TextBlock>
             <!--<CheckBox Grid.Column="1" Grid.Row="3"></CheckBox>-->
@@ -74,7 +100,20 @@
             <TextBlock Grid.Column="0" Grid.Row="4" Text="Filename"/>
             <TextBlock Grid.Column="2" Grid.Row="4" x:Name="fileNameTextblock" Text="{Binding FileName}"/>
             <TextBlock Name="TextBlock1" Visibility="Collapsed" ></TextBlock>
-            <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="5" Margin="8 15 0 0" Name="createButton" Command="{Binding AddCommand}" TabIndex="3" Click="NewCommand_Executed">Submit</Button>
+            <StackPanel Grid.Column="2" Grid.Row="5" Orientation="Horizontal" Margin="5" >
+                <RadioButton Content="X" Margin="2 0 5 0" Name="RadioButtonX"></RadioButton>
+                <RadioButton Content="Y" Margin="2 0 5 0" Name="RadioButtonY"></RadioButton>
+                <RadioButton Content="Select order" Margin="2 0 5 0" Name="RadioButtonSelOrder" IsChecked="True"></RadioButton>
+            </StackPanel>
+ 
+            <Button 
+                Grid.Column="1" Grid.ColumnSpan="2" 
+                Grid.Row="6" Margin="8 15 0 0" Name="createButton" 
+                materialDesign:ButtonAssist.CornerRadius="5"
+                Style="{DynamicResource MaterialDesignRaisedButton}"
+                materialDesign:ShadowAssist.ShadowDepth="Depth2"
+                
+                Command="{Binding AddCommand}" TabIndex="3" Click="NewCommand_Executed">Submit</Button>
         </Grid>
     </DockPanel>
    </Window>
