--- a/TransmittalCreator/Views/LayoutTreeView.xaml
+++ b/TransmittalCreator/Views/LayoutTreeView.xaml
@@ -1,32 +1,44 @@
-﻿<Window x:Class="TestWPF.MainWindow"
+﻿<Window x:Class="TransmittalCreator.Views.LayoutTreeView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TestWPF"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="{Binding SystemParameters.PrimaryScreenHeight}" 
-        Width="300"
-        MaxHeight="600"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModel="clr-namespace:TransmittalCreator.ViewModel"
+        mc:Ignorable="d"
+        Title="LayoutTreeView" Height="{Binding SystemParameters.PrimaryScreenHeight}" 
+        MaxHeight="600"
+        Width="500"
+        
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight ="Regular"
         TextElement.FontSize="14"
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
-        Background="{DynamicResource MaterialDesignBody}"
-        FontFamily="{materialDesign:MaterialDesignFont}">
-    <Window.DataContext>
-        <local:ApplicationViewModel/>
-    </Window.DataContext>
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{materialDesign:MaterialDesignFont}"
+        >
+<Window.DataContext>
+    <viewModel:LayoutTreeViewModel/>
+</Window.DataContext>
     <Window.Resources>
         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <materialDesign:BundledTheme BaseTheme="Inherit" PrimaryColor="LightBlue" SecondaryColor="Lime" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/materialdesigntheme.dark.xaml" /> 
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" /> 
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/themes/recommended/primary/materialdesigncolor.blue.xaml"/> 
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/themes/recommended/accent/materialdesigncolor.green.xaml"/> 
+            </ResourceDictionary.MergedDictionaries>
+
             <Style x:Key="TreeViewItemStyle" TargetType="TreeViewItem">
+                <Setter Property="Foreground" Value="{DynamicResource MaterialDesignBody}"/>
+                <Setter Property="Background" Value="{DynamicResource MaterialDesignPaper}"/>
                 <Setter Property="IsExpanded" Value="True" />
                 <Setter Property="IsSelected" Value="{Binding IsInitiallySelected, Mode=OneTime}" />
                 <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
-                <Setter Property="local:VirtualToggleButton.IsVirtualToggleButton" Value="True" />
-                <Setter Property="local:VirtualToggleButton.IsChecked" Value="{Binding IsChecked}" />
+                <Setter Property="viewModel:VirtualToggleButton.IsVirtualToggleButton" Value="True" />
+                <Setter Property="viewModel:VirtualToggleButton.IsChecked" Value="{Binding IsChecked}" />
             </Style>
 
             <HierarchicalDataTemplate x:Key="CheckBoxItemTemplate"
@@ -42,9 +54,15 @@
         </ResourceDictionary>
     </Window.Resources>
 
+    <!--<Window.DataContext>
+        <ObjectDataProvider 
+      MethodName="CreateTree"
+      ObjectType="{x:Type viewModel:LayoutTreeViewModel}" />
+    </Window.DataContext>-->
+
     <DockPanel>
         <Button DockPanel.Dock="Bottom" 
-                Command="Undo" CommandTarget="{Binding Path=PlacementTarget,RelativeSource={RelativeSource AncestorType={x:Type UndoAction}}}"
+                Command="Undo"
                 Content="Uncheck All" 
                 HorizontalAlignment="Center"
                 Margin="0,2"
@@ -55,12 +73,12 @@
                 HorizontalAlignment="Center"
                 Margin="0,2"
                 Padding="8,0"
+                
                 Command="{Binding AddCommand}" CommandParameter="{Binding ElementName=tree, Path=SelectedItem}" />
         <TreeView x:Name="tree"
                   ItemContainerStyle="{StaticResource TreeViewItemStyle}"
                   ItemsSource="{Binding Mode=OneTime}"
                   ItemTemplate="{StaticResource CheckBoxItemTemplate}"
         />
-        
     </DockPanel>
 </Window>
